@@ -2,6 +2,7 @@ Revision history for Dist-Zilla-Plugin-ModuleBuildTiny
 
 {{$NEXT}}
           Implement a conservative minimum mbt heuristic
+          Detect minimum perl version from configure, build, test and runtime phases instead of just runtime
 
 0.008     2014-10-30 16:05:29+01:00 Europe/Amsterdam
           Build.PL is now created at the correct phase (gather_files), with
